hphp/test/zend/good/ext/mcrypt/tests/mcrypt_decrypt_variation4.php.expectf
*** Testing mcrypt_decrypt() : usage variation ***

--empty string DQ--
Error: 2 - mcrypt_decrypt(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_decrypt_variation4.php(56)
bool(false)

--empty string SQ--
Error: 2 - mcrypt_decrypt(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_decrypt_variation4.php(56)
bool(false)
===DONE===
